# cross-llm-delivery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  KNOWN-ISSUES.md  README.md  SECURITY.md  pyproject.toml  rebuild-skills.ps1  verify.ps1
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
engine/cld/: behavioral.py  orchestrator.py  validate.py
generator/: build_plugins.py  build_skill.py  publish-targets.example.toml  publish.py
skill/: SKILL.md  SKILL.template.md  cross-llm-delivery-usage.md
skill/examples/: demo-plan.md
skill/hooks/: README.md  route_to_executor.py
smoketest/: SLICE_BRIEF.md  pyproject.toml  validate_live.py
smoketest/tests/: test_classify_node.py
tests/: test_behavioral.py  test_browse.py  test_bulk_loop.py  test_dag.py  test_deliver_feedback.py  test_deliver_real_judge.py  test_engine_provider_blind.py  test_evidence.py  test_generator.py  test_git_preflight.py  test_hook.py  test_integration_gate.py  test_judge.py  test_judge_scope.py  test_ledger.py  test_model_index.py  test_models.py  test_optional_deps.py  test_orchestrator_parallel.py  test_orchestrator_resume.py  test_orchestrator_worktree.py  test_otel_sink.py  test_plan_details.py  test_preflight.py  test_providers_antigravity.py  test_providers_api.py  test_providers_cursor.py  test_providers_opencode.py  test_publish.py  test_resolve_validate.py  test_run_delivery.py  test_skeleton.py  test_slice.py  test_status.py  test_status_bymodel.py  test_step_selection.py  test_summary.py  test_telemetry.py  test_telemetry_emit_points.py  test_usage.py  (+3 more)
tests/evals/: test_eval_smoke.py
tests/executors/: test_antigravity.py  test_base.py  test_capture.py  test_cursor.py  test_cursor_invocation.py  test_cursor_usage.py  test_opencode.py  (+2 more)
(+59 files in other folders)
